[gd_scene load_steps=4 format=2]

[ext_resource path="res://Fonts/Custom_Fonts/cardTitleLabel.tres" type="DynamicFont" id=1]
[ext_resource path="res://Fonts/Custom_Fonts/cardLabel.tres" type="DynamicFont" id=2]
[ext_resource path="res://UI/MainManuUi/PlayMenu/AddPlayers/AddPlayerPanel.gd" type="Script" id=3]

[node name="AddPlayerPanel" type="Panel"]
margin_right = 1080.0
margin_bottom = 1920.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="."]
margin_right = 1080.0
margin_bottom = 267.0
custom_fonts/font = ExtResource( 1 )
text = "Players:"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TotalPlayers" type="Label" parent="."]
margin_left = 440.0
margin_top = 300.0
margin_right = 640.0
margin_bottom = 500.0
custom_fonts/font = ExtResource( 2 )
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AddPlayerButton" type="Button" parent="."]
margin_left = 640.0
margin_top = 300.0
margin_right = 840.0
margin_bottom = 500.0
custom_fonts/font = ExtResource( 2 )
text = "+"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RemovePlayerButton" type="Button" parent="."]
margin_left = 240.0
margin_top = 300.0
margin_right = 440.0
margin_bottom = 500.0
custom_fonts/font = ExtResource( 2 )
text = "-"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="."]
margin_top = 550.0
margin_right = 1080.0
margin_bottom = 1700.0
follow_focus = true
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="List" type="VBoxContainer" parent="ScrollContainer"]
mouse_filter = 2

[node name="BackButton" type="Button" parent="."]
margin_right = 150.0
margin_bottom = 154.0
custom_fonts/font = ExtResource( 2 )
text = "B"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartGameButton" type="Button" parent="."]
margin_top = 1720.0
margin_right = 1080.0
margin_bottom = 1920.0
custom_fonts/font = ExtResource( 2 )
action_mode = 0
text = "Choose Deck"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="AddPlayerButton" to="." method="add_player_button"]
[connection signal="pressed" from="RemovePlayerButton" to="." method="remove_player_button"]
[connection signal="pressed" from="BackButton" to="." method="back_button"]
[connection signal="pressed" from="StartGameButton" to="." method="on_confirm_button"]
